# pling

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: coverage.yml  rust.yml
docs/: command.md  desktop.md  email.md  matrix.md  slack.md  telegram.md  webhook.md
examples/: all_env.rs  clap.rs  desktop.rs  email.rs  matrix.rs  slack.rs  telegram.rs  webhook.rs
src/: clap.rs  command.rs  desktop.rs  email.rs  lib.rs  matrix.rs  slack.rs  test_helper.rs  webhook.rs
src/telegram/: mod.rs  parse_mode.rs  target_chat.rs
