[package]
name = "pling"
description = "Send notifications via Slack, Telegram, ..."
version = "0.3.0"
license = "MIT"
repository = "https://github.com/EdJoPaTo/pling"
authors = ["EdJoPaTo <pling-rust@edjopato.de>"]
edition = "2021"
categories = [
	"command-line-interface",
	"network-programming",
	"web-programming::http-client",
]
keywords = ["notification", "notify", "telegram", "slack"]
include = [
	"docs/**/*",
	"examples/**/*",
	"src/**/*",
	"LICENSE",
	"README.md",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "all_env"
required-features = []

[[example]]
name = "matrix"
required-features = ["ureq"]

[[example]]
name = "slack"
required-features = ["ureq"]

[[example]]
name = "telegram"
required-features = ["ureq"]

[[example]]
name = "webhook"
required-features = ["ureq"]

[features]
default = ["ureq"]
reqwest = ["dep:reqwest"]
ureq = ["dep:ureq"]

[lints.rust]
unsafe_code = "forbid"
[lints.clippy]
pedantic = "warn"
nursery = "warn"

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", optional = true, default-features = false, features = ["rustls-tls", "socks"] }
ureq = { version = "2", optional = true }
url = "2"
