[package]
name = "pling"
description = "Send notifications via Slack, Telegram, ..."
version = "0.4.0"
license = "MIT"
repository = "https://github.com/EdJoPaTo/pling"
authors = ["EdJoPaTo <pling-rust@edjopato.de>"]
edition = "2021"
rust-version = "1.64"
categories = [
	"command-line-interface",
	"network-programming",
	"web-programming::http-client",
]
keywords = ["notification", "notify", "telegram", "slack"]
include = [
	"examples/**/*",
	"src/**/*",
	"LICENSE",
	"README.md",
]

[features]
# default = ["clap", "reqwest", "ureq"]
clap = ["dep:clap"]
reqwest = ["dep:reqwest"]
ureq = ["dep:ureq"]

[lints.rust]
unsafe_code = "forbid"
[lints.clippy]
pedantic = "warn"
nursery = "warn"

[[example]]
name = "clap"
required-features = ["ureq", "clap"]

[dependencies]
anyhow = "1.0.16"
clap = { version = "4.0.0", optional = true, features = ["derive", "env"] }
reqwest = { version = "0.12.0", optional = true, default-features = false, features = ["rustls-tls", "socks"] }
ureq = { version = "2.0.0", optional = true }
url = "2.2.0"
